Correction to Ticket #114: Links in sidebar menu overflow the down arrows

--- a/sites/all/themes/unca_zenfoundation/css/unca_zenfoundation.css
+++ b/sites/all/themes/unca_zenfoundation/css/unca_zenfoundation.css
@@ -6946,7 +6946,7 @@ nav.navigation .block-menu-menu-secondary-navigation---prot ul.menu ul, nav.navi
 }
 .sidebar .block-menu-menu-secondary-navigation---prot a, .ds-sidebar-column .block-menu-menu-secondary-navigation---prot a, .sidebar .navigation-secondary a, .ds-sidebar-column .navigation-secondary a {
   display: block;
-  width: 97%;
+  width: 94%;
   padding: 0.41667em 0.83333em;
   text-decoration: none;
 }
