--- a/sites/all/themes/unca_zenfoundation/sass/components/menus/_secondary-menu.scss
+++ b/sites/all/themes/unca_zenfoundation/sass/components/menus/_secondary-menu.scss
@@ -77,7 +77,7 @@
     }
     a {
       display: block;
-      width:97%;
+      width:94%;
       padding: emCalc(5px) emCalc(10px);
       text-decoration: none;
       &:hover {
